--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
         "@types/mongoose": "^5.11.96",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cloudinary": "^2.4.0",
+        "compression": "^1.7.4",
         "connect-mongo": "^5.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -26,15 +28,18 @@
         "express-session": "^1.18.0",
         "express-validator": "^7.2.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.5.3"
+        "mongoose": "^8.5.3",
+        "multer": "^1.4.5-lts.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/express-session": "^1.18.0",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/multer": "^1.4.11",
         "@types/node": "^22.4.0",
         "nodemon": "^3.1.4",
         "typescript": "^5.5.4"
